# maximum-flow-and-minimum-cost-flow-in-almost-linear-time

./: README.md  shell.nix
.github/workflows/: test-and-lint.yml
static-algorithm/: .gitignore  Makefile  benchmark.py  custom_types.py  cycle.py  edmond_karp.py  feasible_flow.py  flake.nix  graphviz.py  howard.c  howard.py  main.py  min_cost_flow_instance.py  moc.py  pyproject.toml  test.py  test_cycles.py  test_results.py  utils.py
static-algorithm/flows/: __init__.py  capacity_scaling.py  edmond_karp.py  push_relabel.py
static-algorithm/min_ratio/: Cargo.toml  README.md  pyproject.toml  test.py
static-algorithm/min_ratio/src/: lib.rs
static-algorithm/scripts/: generate_benchmark_dataset.py  generate_flow_graph.py  generate_line_dataset.py  generate_maxflow.py  generate_pgfplots.py
static-algorithm/tests/: conftest.py  find_max_flow.py  test_bench.py  test_random.py  test_results.py  utils.py  verifier.py
