[tool.poetry]
name = "static-algorithm"
version = "0.1.0"
description = ""
authors = ["Adrian Borup <adrian@borup.com>", "albe2669 <albert@risenielsen.dk>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
networkx = "^3.4.2"
maturin = "^1.7.4"
basedpyright = "^1.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "0.7.2"
pyright = "^1.1.388"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore=["E741"]

[tool.pyright]
reportConstantRedefinition = false

